manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-app
spec:
  selector:
    matchLabels:
      app: s3-app
  template:
    metadata:
      labels:
        app: s3-app
    spec:
      containers:
        - name: s3-app
          image: shubh197/s3-k8s:latest
          ports:
            - containerPort: 10000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
