manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-app
spec:
  selector:
    app: s3-app
  ports:
    - port: 10000
      targetPort: 10000
  type: ClusterIP
