manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: s3-app
                port:
                  number: 10000

          # - path: /grafana(/|$)(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: grafana
          #       port:
          #         number: 80
